--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -2,15 +2,27 @@
   text-align: center;
 }
 
-.App-header {
+.App-content {
   background-color: #222;
   color: white;
   padding-bottom: 5px;
 }
 
 .Qinfo-search {
-  color: aqua;
   position: absolute;
   top: 0px;
   right: 0px;
+}
+
+.Qinfo-items-head {
+  background-color: #222;
+  color: dimgray;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.Qinfo-items-txt {
+  background-color: white;
+  color: black;
+  text-align: left;
 }
