--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -2,23 +2,27 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
+.App-content {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
   color: white;
+  padding-bottom: 5px;
 }
 
-.App-intro {
-  font-size: large;
+.Qinfo-search {
+  position: absolute;
+  top: 0px;
+  right: 0px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Qinfo-items-head {
+  background-color: #222;
+  color: dimgray;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.Qinfo-items-txt {
+  background-color: white;
+  color: black;
+  text-align: left;
 }
