--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -5,24 +5,44 @@
 .App-content {
   background-color: #222;
   color: white;
-  padding-bottom: 5px;
+  padding: 5px;
 }
 
 .Qinfo-search {
   position: absolute;
-  top: 0px;
-  right: 0px;
+  top: 5px;
+  right: 5px;
+}
+
+.Qinfo-items {
+  text-align: left;
 }
 
 .Qinfo-items-head {
   background-color: #222;
   color: dimgray;
-  padding-left: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 35px;
+}
+
+.Qinfo-items-content {
+  display: flex;
+}
+
+.Qinfo-items-lno {
+  display: inline-block;
+  background-color: #222;
+  color: dimgray;
   padding-right: 5px;
+  width: 30px;
 }
 
 .Qinfo-items-txt {
   background-color: white;
   color: black;
-  text-align: left;
+  font-size: small;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 5px;
+  flex: 1;
 }
