--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: dimgray;
+}
+
 .App {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -9,10 +13,18 @@
   padding: 5px;
 }
 
+.Qinfo-title {
+  height: 25px;
+}
+
 .Qinfo-search {
   position: absolute;
   top: 5px;
-  right: 5px;
+  right: 0px;
+}
+
+.Qinfo-input {
+  padding-left: 5px;
 }
 
 .Qinfo-items {
@@ -46,7 +58,7 @@
 }
 
 .Qinfo-items-txt {
-  background-color: white;
+  background-color: ivory;
   color: black;
   padding: 5px;
   flex: 1;
